--- a/index.html
+++ b/index.html
@@ -260,14 +260,79 @@
         <h2 class="contacts__title">Как нас найти</h2>
         <div class="contacts__map">
           <address class="contacts__address">
-            <p class="contacts__address-text">
-              г. Ульяновск, 2-й переулок Мира, 24 (рядом с ТЦ "Мираж"). <br>
-              Вход со стороны парковки                
-            </p>            
+            <div class="contacts__address-items">
+              <p class="contacts__address-item">
+                <h3 class="contacts__address-title">Адрес:</h3>
+                <div class="contacts__address-text">
+                  г. Ульяновск, 2-ой переулок Мира, 24 (рядом с ТЦ Мираж)  
+                </div>                  
+              </p>
+              <p class="contacts__address-item">
+                <h3 class="contacts__address-title">Маршрутное такси:</h3>  
+                <div class="contacts__address-text">
+                  Данные о маршрутных такси взяты с сайта 2gis.ru/ulyanovsk 
+                  и могут быть неточными.  
+                </div>                
+                <h4 class="contacts__address-title-taxi">Остановка Гончарова (гостиница Hilton)</h4>
+                <div class="contacts__address-text-taxi">
+                  7,8,12,16,38,43,58,67,69,74,78,81,82,84,87,88 
+                </div>                
+                <h4 class="contacts__address-title-taxi">Остановка "Стадион Труд" (ТЦ "Сити" и "Амарант")</h4>                
+                <div class="contacts__address-text-taxi">
+                  12,16,22,25,50,52,55,68,72,73,74,81,91,93
+                </div> 
+              </p>   
+              <p class="contacts__address-item">
+                <h3 class="contacts__address-title">Телефоны:</h3>
+                <div class="contacts__address-text">
+                  700-228 (Рецепция)<br />
+                  8 937 88 200 76 Администратор Борис
+                </div>                  
+              </p>
+              <p class="contacts__address-item">
+                <h3 class="contacts__address-title">График работы:</h3>
+                <div class="contacts__address-text">
+                  ПН-ПТ: с 16:00 до 21:00 <br />
+                  СБ: с 17:00 до 18:00 <br />
+                  ВС: с 13:00 до 19:00
+                </div>                  
+              </p>
+              <p class="contacts__address-item">
+                <h3 class="contacts__address-title">Добавляйтесь в друзья:</h3>
+                <div class="contacts__address-text">
+                  <ul class="social">
+                    <li class="social__item">
+                      <a class="social__item--vk" href="https://vk.com/skydancestudio" target="_blank">
+                        <svg>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--vk">
+                          </use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social__item">
+                      <a class="social__item--tw" href="twitter.com" target="_blank">
+                        <svg>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--tw">
+                          </use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="social__item">
+                      <a class="social__item--inst" href="instagram.com" target="_blank">
+                        <svg>
+                          <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item--inst">
+                          </use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                </div>                  
+              </p>
+            </div>            
             <div class="contacts__address-map"></div>
           </address>          
           <!-- Google map только на планшетах и десктопах -->
-          <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2327.0447081718435!2d48.39535431549522!3d54.32084098019481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769a88a2963%3A0x18063174b6a45017!2sSkyDance+studio!5e0!3m2!1sru!2sru!4v1487415900789" width="345" height="300" style="border:0" allowfullscreen></iframe>
+          <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2327.0447081718435!2d48.39535431549522!3d54.32084098019481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769a88a2963%3A0x18063174b6a45017!2sSkyDance+studio!5e0!3m2!1sru!2sru!4v1487415900789" width="345" height="350" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
     </section>
