исправлен эффект нажатия кнопки для маленького меню

--- a/index.html
+++ b/index.html
@@ -379,8 +379,8 @@
       </div>      
       <form class="feedback__form" action="feedback" method="post">
         <div class="feedback__form-block">        
-          <input type="text" id="username" name="username" placeholder="Ваше имя"/>        
-          <input type="text" id="phone" name="phone" placeholder="Телефон"/>
+          <input type="text" id="username" name="username" placeholder="Ваше имя" required/>        
+          <input type="text" id="phone" name="phone" placeholder="Телефон" required/>
           <button class="feedback__form-submit" type="submit">Отправить</button>
         </div>        
       </form>
