--- a/index.html
+++ b/index.html
@@ -98,12 +98,7 @@
           </ul>
           <div class="nav__feedback">
             <p class="nav__feedback-item nav__feedback--tel">тел. 700-228</p>
-            <a class="nav__feedback-item nav__feedback--callme" href="#callme">перезвоните мне</a>
-            <!-- VK Widget -->
-            <div id="nav__feedback-vk"></div>
-              <script type="text/javascript">
-                VK.Widgets.CommunityMessages("nav__feedback-vk", 54275923, {tooltipButtonText: "Есть вопрос?"});
-              </script>
+            <a class="nav__feedback-item nav__feedback--callme">перезвоните мне</a>            
           </div>
         </div>
       </nav>
@@ -259,15 +254,15 @@
       <div class="contacts__wrapper">
         <h2 class="contacts__title">Как нас найти</h2>
         <div class="contacts__map">
-          <address class="contacts__address">
+          <div class="contacts__address">
             <div class="contacts__address-items">
-              <p class="contacts__address-item">
+              <div class="contacts__address-item">
                 <h3 class="contacts__address-title">Адрес:</h3>
                 <div class="contacts__address-text">
                   г. Ульяновск, 2-ой переулок Мира, 24 (рядом с ТЦ Мираж)  
                 </div>                  
-              </p>
-              <p class="contacts__address-item">
+              </div>
+              <div class="contacts__address-item">
                 <h3 class="contacts__address-title">Маршрутное такси:</h3>  
                 <div class="contacts__address-text">
                   Данные о маршрутных такси взяты с сайта 2gis.ru/ulyanovsk 
@@ -281,23 +276,23 @@
                 <div class="contacts__address-text-taxi">
                   12,16,22,25,50,52,55,68,72,73,74,81,91,93
                 </div> 
-              </p>   
-              <p class="contacts__address-item">
+              </div>   
+              <div class="contacts__address-item">
                 <h3 class="contacts__address-title">Телефоны:</h3>
                 <div class="contacts__address-text">
                   700-228 (Рецепция)<br />
                   8 937 88 200 76 Администратор Борис
                 </div>                  
-              </p>
-              <p class="contacts__address-item">
+              </div>
+              <div class="contacts__address-item">
                 <h3 class="contacts__address-title">График работы:</h3>
                 <div class="contacts__address-text">
                   ПН-ПТ: с 16:00 до 21:00 <br />
                   СБ: с 17:00 до 18:00 <br />
                   ВС: с 13:00 до 19:00
                 </div>                  
-              </p>
-              <p class="contacts__address-item">
+              </div>
+              <div class="contacts__address-item">
                 <h3 class="contacts__address-title">Добавляйтесь в друзья:</h3>
                 <div class="contacts__address-text">
                   <ul class="social">
@@ -327,10 +322,10 @@
                     </li>
                   </ul>
                 </div>                  
-              </p>
+              </div>
             </div>            
             <div class="contacts__address-map"></div>
-          </address>          
+          </div>          
           <!-- Google map только на планшетах и десктопах -->
           <iframe class="contacts__google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2327.0447081718435!2d48.39535431549522!3d54.32084098019481!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x415d3769a88a2963%3A0x18063174b6a45017!2sSkyDance+studio!5e0!3m2!1sru!2sru!4v1487415900789" width="345" height="350" style="border:0" allowfullscreen></iframe>
         </div>
@@ -377,15 +372,17 @@
           и наш консультант свяжется с вами в ближайшее время
         </p>  
       </div>      
-      <form class="feedback__form" action="feedback" method="post">
+      <form class="feedback__form" action="feedback" method="post" id="feedback__form">
         <div class="feedback__form-block">        
           <input type="text" id="username" name="username" placeholder="Ваше имя" required/>        
           <input type="text" id="phone" name="phone" placeholder="Телефон" required/>
           <button class="feedback__form-submit" type="submit">Отправить</button>
+          <div class="feedback__request-success">          
+          </div>
         </div>        
       </form>
     </section>
-
+    
   <script src="js/script.js"></script>
   <!-- jquery -->
   <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
@@ -419,6 +416,36 @@
         return false;
       });
     });
+  </script>  
+  
+  <script>
+  $('#feedback__form').submit( function(evt){ //function sendRequest(){						
+          evt.preventDefault();
+    $.ajax({    // Начала конструкции для работы с Ajax через jQuery
+      type: "POST", // Метод, которым получаем данные из формы
+      url: "/cgi-bin/sendmail.py", // Обработчик формы.
+      data: $("#feedback__form").serialize(), // Этот метод, берет форму с id=form и достает оттуда данные
+      success: function(html) {                        
+                  if(html == 'error')
+                    return false;
+                  else {                    
+                    $(".feedback__request-success").html("Спасибо за обращение. <br /> Ваше сообщение отправлено."); 
+                    setTimeout(function(){
+                      $(".feedback__request-success").html('');
+                      $('#feedback__form input[type="text"]').val('');		// обнуляем форму                        
+                      $('.feedback').addClass('feedback--hidden');
+                      $('body').removeClass('overlay');
+                    },3000);
+                  }
+      }
+    });			          
+  });
+  </script>
+  
+  <!-- VK Widget -->
+  <div id="nav__feedback-vk"></div>
+  <script type="text/javascript">
+    VK.Widgets.CommunityMessages("nav__feedback-vk", 54275923, {tooltipButtonText: "Есть вопрос?"});
   </script>
   
   </body>
