--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
       <form class="feedback__form" action="feedback" method="post" id="feedback__form">
         <div class="feedback__form-block">        
           <input type="text" id="username" name="username" placeholder="Ваше имя" required/>        
-          <input type="text" id="phone" name="phone" placeholder="Телефон" required/>
+          <input type="text" id="phone" name="phone" placeholder="+7XXXXXXXXXX" minlength="11" maxlength="12" required/>
           <button class="feedback__form-submit" type="submit">Отправить</button>
           <div class="feedback__request-success">          
           </div>
@@ -389,7 +389,7 @@
   <!-- easing plugin ( optional ) -->
   <script src="js/easing.js" type="text/javascript"></script>
   <!-- UItoTop plugin -->
-  <script src="js/jquery.ui.totop.js" type="text/javascript"></script>
+  <script src="js/jquery.ui.totop.js" type="text/javascript"></script>  
   <!-- Starting the plugin -->
   <script type="text/javascript">
     $(document).ready(function() {
@@ -405,8 +405,8 @@
     $().UItoTop({ easingType: 'easeOutQuart' });
 
     });
-  </script>
-
+  </script>  
+  
   <script type="text/javascript">
     $(document).ready(function() {
       $("a.nav__link").click(function () {
@@ -419,6 +419,7 @@
   </script>  
   
   <script>
+  
   $('#feedback__form').submit( function(evt){ //function sendRequest(){						
           evt.preventDefault();
     $.ajax({    // Начала конструкции для работы с Ajax через jQuery
