Убрал ***Заказать звонок***

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </ul>
           <div class="nav__feedback">
             <p class="nav__feedback-item nav__feedback--tel">тел. 700-228</p>
-            <a class="nav__feedback-item nav__feedback--callme">перезвоните мне</a>            
+            <!--<a class="nav__feedback-item nav__feedback--callme">перезвоните мне</a>-->
           </div>
         </div>
       </nav>
