Убрал сотовый телефон Бориса

--- a/index.html
+++ b/index.html
@@ -280,8 +280,7 @@
               <div class="contacts__address-item">
                 <h3 class="contacts__address-title">Телефоны:</h3>
                 <div class="contacts__address-text">
-                  700-228 (Рецепция)<br />
-                  8 937 88 200 76 Администратор Борис
+                  700-228 (Рецепция)                  
                 </div>                  
               </div>
               <div class="contacts__address-item">
