--- a/template.html
+++ b/template.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Занятия Pole Dance в Ульяновске|Sky Dance Studio</title>
+    <title> Расписание школы Pole Dance в Ульяновске|Sky Dance Studio</title>
     <meta name="description" content="Школа танцев Sky Dance Studio">
     <meta name="keywords" content="">
 
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    
   </head>
-  <body>
-    <table>
+  <body class="shedule-excel">
+    <table class="shedule-excel__table">
       {!change_here}
     </table>
   </body>
