Файл с расписанием дергаем из гуглдокумент

--- a/shedule-excel.html
+++ b/shedule-excel.html
@@ -10,11 +10,16 @@
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    
+    <style>
+      iframe {
+        width: 100%;
+        height: 100%;
+
+        border: 0;
+      }
+    </style>
   </head>
-  <body class="shedule-excel">
-    <table class="shedule-excel__table">
-      <tr><th>преподаватель</th><th>№ группы</th><th>Уровень</th><th>ПН</th><th>ВТ</th><th>СР</th><th>ЧТ</th><th>ПТ</th><th>СБ</th><th>ВС</th><th>Статус</th></tr><tr><td>Кислицина Ксюша</td><td>1</td><td>Выше среднего</td><td>20:00</td><td></td><td>20:00</td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>Кислицина Ксюша</td><td>3</td><td>Средний</td><td></td><td></td><td>18:00</td><td></td><td>18:00</td><td></td><td></td><td></td></tr><tr><td>Кислицина Ксюша</td><td>4</td><td>Набор</td><td>17:00</td><td></td><td>17:00</td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>Кислицина Ксюша</td><td>5</td><td>Выше среднего</td><td></td><td>18:00</td><td></td><td>18:00</td><td></td><td></td><td></td><td></td></tr><tr><td>Кислицина Ксюша</td><td>6</td><td>Высокий</td><td></td><td>21:00</td><td></td><td>21:00</td><td></td><td></td><td></td><td></td></tr><tr><td>Кислицина Ксюша</td><td>7</td><td>Средний</td><td></td><td>17:00</td><td></td><td>17:00</td><td></td><td></td><td></td><td></td></tr><tr><td>Кислицина Ксюша</td><td>8</td><td>Начинающие</td><td>19:00</td><td></td><td></td><td></td><td>19:00</td><td></td><td></td><td>4566</td></tr><tr><td>Кислицина Ксюша</td><td>9</td><td>Набор</td><td></td><td>19:00</td><td></td><td>19:00</td><td></td><td></td><td></td><td></td></tr><tr><td>Кислицина Ксюша</td><td>10</td><td>Начинающие</td><td></td><td>20:00</td><td></td><td>20:00</td><td></td><td></td><td></td><td></td></tr><tr><td>Кислицина Ксюша</td><td>12</td><td>Начинающие</td><td>13:00</td><td></td><td>13:00</td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>Быкина Маша</td><td>2</td><td>Средний</td><td>20:00</td><td></td><td>20:00</td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>Быкина Маша</td><td>1</td><td>Средний</td><td>19:00</td><td></td><td>19:00</td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>Быкина Маша</td><td>3</td><td>Начинающие</td><td>21:00</td><td></td><td>21:00</td><td></td><td></td><td></td><td></td><td></td></tr><tr><td>Хорольская Галя</td><td>1</td><td>Набор</td><td></td><td></td><td></td><td></td><td></td><td>17:00</td><td>17:00</td><td></td></tr><tr><td>Хорольская Галя</td><td>2</td><td>Смешанный</td><td></td><td>19:00</td><td></td><td>19:00</td><td></td><td></td><td></td><td></td></tr><tr><td>Хорольская Галя</td><td>3</td><td>Смешанный</td><td></td><td>20:00</td><td></td><td>20:00</td><td></td><td></td><td></td><td></td></tr><tr><td>Ерхалева Света</td><td>1</td><td>Начинающие</td><td></td><td>18:00</td><td></td><td>18:00</td><td></td><td></td><td></td><td></td></tr><tr><td>Ерхалева Света</td><td>4</td><td>Набор</td><td></td><td></td><td>19:00</td><td></td><td>19:00</td><td></td><td></td><td></td></tr><tr><td>Ерхалева Света</td><td>2</td><td>Набор</td><td>18:00</td><td></td><td></td><td></td><td>18:00</td><td></td><td></td><td>777</td></tr>
-    </table>
-  </body>
+  <body>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRNsLvQYicnN06zXYbzfcJaMdrhuTB5jSuBRpgPlIqOe9H8hQvaGxn5RcGZRuJFazaKpbYHoRlgWiyU/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+  </body>  
 </html>
