изменена форма расписания - переделано на табличную форму

--- a/sched-template.html
+++ b/sched-template.html
@@ -111,9 +111,11 @@
           <h2 class="schedule__title" id="schedule">Расписание</h2>
           <!--<iframe src="Schedule.html" id="schedule-frame" scrolling="no">
           </iframe>-->
-          <table>
-            {!change_here}
-          </table>
+          <div class="schedule__table">
+            <table>
+              {!change_here}
+            </table>
+          </div>
         </div>
       </section>
 
@@ -128,6 +130,7 @@
                 </svg>
               </a>
             </li>
+            <!--
             <li class="social__item">
               <a class="social__item--tw" href="twitter.com" target="_blank">
                 <svg>
@@ -136,8 +139,9 @@
                 </svg>
               </a>
             </li>
+           -->
             <li class="social__item">
-              <a class="social__item--inst" href="instagram.com" target="_blank">
+              <a class="social__item--inst" href="https://www.instagram.com/skydance73" target="_blank">
                 <svg class="footer__svg">
                   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item-footer--inst">
                   </use>
