--- a/sched-template.html
+++ b/sched-template.html
@@ -14,7 +14,7 @@
       </symbol>
       <!-- для footer vk-->
       <symbol viewBox="0 0 800 800" id="social__item-footer--vk">
-        <path fill="#ffffff" d="M393 566c-135 0-208-143-276-285-10-21 6-23 16-23l81-1c12 0 17 9 20 15 13 31 66 142 92 129 18-9 15-107 4-122-7-9-20-12-26-13-5-1 3-11 13-16 18-9 87-9 111-3 28 7 19 32 19 95 0 20-4 50 11 58 24 12 81-101 91-131 3-8 9-11 19-11h85c20 0 27 1 30 8 5 12-9 40-44 87-57 77-65 70-17 114 46 42 55 63 57 66 14 28-11 34-21 34h-76c-9 0-21 0-38-11-29-19-55-70-76-64-17 5-20 34-21 53-1 16-10 21-20 21h-34z"/>
+        <path d="M393 566c-135 0-208-143-276-285-10-21 6-23 16-23l81-1c12 0 17 9 20 15 13 31 66 142 92 129 18-9 15-107 4-122-7-9-20-12-26-13-5-1 3-11 13-16 18-9 87-9 111-3 28 7 19 32 19 95 0 20-4 50 11 58 24 12 81-101 91-131 3-8 9-11 19-11h85c20 0 27 1 30 8 5 12-9 40-44 87-57 77-65 70-17 114 46 42 55 63 57 66 14 28-11 34-21 34h-76c-9 0-21 0-38-11-29-19-55-70-76-64-17 5-20 34-21 53-1 16-10 21-20 21h-34z"/>
       </symbol>
 
       <symbol viewBox="0 0 800 800" id="social__item--fb">
@@ -22,7 +22,7 @@
       </symbol>
       <!-- для footer fb -->
       <symbol viewBox="0 0 800 800" id="social__item-footer--fb">
-        <path fill="#ffffff" d="M445 643h-90V419h-75v-87h75v-64q0-55 32-86 30-29 80-29 28 0 67 3v78h-47q-42 0-42 38v60h86l-11 87h-75v224z"/>
+        <path d="M445 643h-90V419h-75v-87h75v-64q0-55 32-86 30-29 80-29 28 0 67 3v78h-47q-42 0-42 38v60h86l-11 87h-75v224z"/>
       </symbol>
 
       <symbol viewBox="0 0 800 800" id="social__item--tw">
@@ -38,7 +38,7 @@
       </symbol>
       <!-- для footer inst -->
       <symbol viewBox="0 0 800 800" id="social__item-footer--inst">
-        <path fill="#ffffff" d="M150 400c0-119 0-166 42-208s88-42 208-42 166 0 208 42 42 89 42 208 0 166-42 208-88 42-208 42-166 0-208-42-42-89-42-208zm455 0c0-114 0-148-29-176-29-29-62-29-176-29s-148 0-176 29c-29 29-29 62-29 176s0 148 29 176c29 29 62 29 176 29s148 0 176-29c29-29 29-62 29-176zM400 272a128 128 0 1 1 0 256 128 128 0 0 1 0-256zm0 211c46 0 83-37 83-83s-37-83-83-83-83 37-83 83 37 83 83 83zm163-216c0 16-13 30-30 30-16 0-30-14-30-30 0-17 14-30 30-30 17 0 30 13 30 30z"/>
+        <path d="M150 400c0-119 0-166 42-208s88-42 208-42 166 0 208 42 42 89 42 208 0 166-42 208-88 42-208 42-166 0-208-42-42-89-42-208zm455 0c0-114 0-148-29-176-29-29-62-29-176-29s-148 0-176 29c-29 29-29 62-29 176s0 148 29 176c29 29 62 29 176 29s148 0 176-29c29-29 29-62 29-176zM400 272a128 128 0 1 1 0 256 128 128 0 0 1 0-256zm0 211c46 0 83-37 83-83s-37-83-83-83-83 37-83 83 37 83 83 83zm163-216c0 16-13 30-30 30-16 0-30-14-30-30 0-17 14-30 30-30 17 0 30 13 30 30z"/>
       </symbol>
 
       <symbol viewBox="0 0 64 64" id="geolocation">
@@ -94,8 +94,7 @@
 
             </ul>
             <div class="nav__feedback">
-              <p class="nav__feedback-item nav__feedback--tel">тел. +7 937 882 0076</p>
-              <!--<a class="nav__feedback-item nav__feedback--callme" href="#callme">перезвоните мне</a>-->
+              <p class="nav__feedback-item nav__feedback--tel">тел. +7 937 882 0076</p>              
               <!-- VK Widget -->
               <div id="nav__feedback-vk"></div>
                 <script type="text/javascript">
@@ -109,8 +108,6 @@
       <section class="schedule">
         <div class="schedule__wrapper">
           <h2 class="schedule__title" id="schedule">Расписание</h2>
-          <!--<iframe src="Schedule.html" id="schedule-frame" scrolling="no">
-          </iframe>-->
           <div class="schedule__table">
             <table>
               {!change_here}
@@ -121,6 +118,9 @@
 
       <footer class="footer">
         <div class="footer__wrapper">
+          <div class="footer__title">
+            Мы в социальных сетях
+          </div>
           <ul class="social">
             <li class="social__item">
               <a class="social__item--vk" href="https://vk.com/skydancestudio" target="_blank">
@@ -130,16 +130,7 @@
                 </svg>
               </a>
             </li>
-            <!--
-            <li class="social__item">
-              <a class="social__item--tw" href="twitter.com" target="_blank">
-                <svg>
-                  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#social__item-footer--tw">
-                  </use>
-                </svg>
-              </a>
-            </li>
-           -->
+
             <li class="social__item">
               <a class="social__item--inst" href="https://www.instagram.com/skydance73" target="_blank">
                 <svg class="footer__svg">
