Добавлены иконки для раздела Как нас найти, увеличен шрифт в разделе Контакты

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         <div class="contacts__map">
           <div class="contacts__address">
             <div class="contacts__address-items">
-              <div class="contacts__address-item">
+              <div class="contacts__address-item  contacts__address-item--icons  contacts__address-item--address-icon">
                 <h3 class="contacts__address-title">Адрес:</h3>
                 <div class="contacts__address-text">
                   г. Ульяновск, 2-ой переулок Мира, 24 (рядом с ТЦ Мираж)
@@ -280,7 +280,7 @@
                   12,16,22,25,50,52,55,68,72,73,74,81,91,93
                 </div>
               </div>
-              <div class="contacts__address-item">
+              <div class="contacts__address-item  contacts__address-item--icons  contacts__address-item--phone-icon">
                 <h3 class="contacts__address-title">Телефоны:</h3>
                 <div class="contacts__address-text">
                   +7 937 882 0076
