--- a/sched-template.html
+++ b/sched-template.html
@@ -108,11 +108,19 @@
       <section class="schedule">
         <div class="schedule__wrapper">
           <h2 class="schedule__title" id="schedule">Расписание</h2>
+          <p class="schedule__text">
+            Для записи на пробное занятие звоните по тел. +7 937 882 0076 <br />
+            Платить за пробное занятие не нужно!
+          </p>
           <div class="schedule__table">
             <table>
               {!change_here}
             </table>
           </div>
+          <p class="schedule__text">
+            Для записи на пробное занятие звоните по тел. +7 937 882 0076 <br />
+            Платить за пробное занятие не нужно!
+          </p>
         </div>
       </section>
 
