Изменена главная страница

--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
           </div>
 
           <div class="nav__menu-footer">
-            <a class="nav__logo">  <!-- href на главной странице не указываем -->
+            <!--<a class="nav__logo"> 
               <picture>
                 <source srcset="images/logo_sky_dance.webp" type="image/webp">
                 <img src="images/logo_sky_dance.png" width="130" height="70" alt="Логотит студии">
               </picture>
-            </a>
+            </a>-->
             <a class="nav__logo-text">  <!-- href на главной странице не указываем -->
               Sky Dance Studio
             </a>
@@ -105,6 +105,26 @@
     </header>
 
     <main>
+      
+      <section class="about" id="about">
+        <div class="about__wrapper">
+          <picture class="about__logo">
+            <source srcset="images/logo_sky_dance.webp" type="image/webp">
+            <img src="images/logo_sky_dance.png" alt="Логотит студии">
+          </picture>
+          <h2 class="about__title">Занятия Pole Dance в Ульяновске</h2>
+          <p class="about__text">
+            Sky Dance Studio - первая в городе школа танца и акробатики на пилоне.
+            Sky Dance - это 2 уютных зала, 12 профессиональных пилонов, огромный выбор расписания для новичков и профессионалов.
+            Sky Dance - это профессионализм и стиль, это место, где раскрываются таланты, место где вы обретёте вторую семью.
+            Sky Dance - это команда опытных педагогов, которые помогут обрести вам гармонию в танце, теле и душе
+          </p>
+          <p class="about__phone">
+            Тел. +7 937 882 0076            
+          </p>
+        </div>
+      </section>
+      
       <div class="slider">
         <ul class="slider__items">
           <li class="slider__item  slider__item--active">
@@ -129,18 +149,6 @@
         <button class="slider__btn  slider__btn--prev"></button>
         <button class="slider__btn  slider__btn--next"></button>
       </div>
-
-      <section class="about" id="about">
-        <div class="about__wrapper">
-          <h2 class="about__title">О нас</h2>
-          <p class="about__text">
-            Sky Dance Studio - первая в городе школа танца и акробатики на пилоне.
-            Sky Dance - это 2 уютных зала, 12 профессиональных пилонов, огромный выбор расписания для новичков и профессионалов.
-            Sky Dance - это профессионализм и стиль, это место, где раскрываются таланты, место где вы обретёте вторую семью.
-            Sky Dance - это команда опытных педагогов, которые помогут обрести вам гармонию в танце, теле и душе
-          </p>
-        </div>
-      </section>
 
       <section class="about-lessons">
         <div class="about-lessons__wrapper">
