исправлена проблема с выделением телефона

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
     <title>Занятия Pole Dance в Ульяновске|Sky Dance Studio</title>
     <meta name="description" content="Школа танцев Sky Dance Studio">
     <meta name="keywords" content="">
