--- a/sched-template.html
+++ b/sched-template.html
@@ -9,45 +9,45 @@
   </head>
   <body>
     <svg style="display:none">
-      <symbol viewBox="0 0 800 800" id="social__item--vk">
+      <symbol viewbox="0 0 800 800" id="social__item--vk">
         <path d="M393 566c-135 0-208-143-276-285-10-21 6-23 16-23l81-1c12 0 17 9 20 15 13 31 66 142 92 129 18-9 15-107 4-122-7-9-20-12-26-13-5-1 3-11 13-16 18-9 87-9 111-3 28 7 19 32 19 95 0 20-4 50 11 58 24 12 81-101 91-131 3-8 9-11 19-11h85c20 0 27 1 30 8 5 12-9 40-44 87-57 77-65 70-17 114 46 42 55 63 57 66 14 28-11 34-21 34h-76c-9 0-21 0-38-11-29-19-55-70-76-64-17 5-20 34-21 53-1 16-10 21-20 21h-34z"/>
       </symbol>
       <!-- для footer vk-->
-      <symbol viewBox="0 0 800 800" id="social__item-footer--vk">
+      <symbol viewbox="0 0 800 800" id="social__item-footer--vk">
         <path d="M393 566c-135 0-208-143-276-285-10-21 6-23 16-23l81-1c12 0 17 9 20 15 13 31 66 142 92 129 18-9 15-107 4-122-7-9-20-12-26-13-5-1 3-11 13-16 18-9 87-9 111-3 28 7 19 32 19 95 0 20-4 50 11 58 24 12 81-101 91-131 3-8 9-11 19-11h85c20 0 27 1 30 8 5 12-9 40-44 87-57 77-65 70-17 114 46 42 55 63 57 66 14 28-11 34-21 34h-76c-9 0-21 0-38-11-29-19-55-70-76-64-17 5-20 34-21 53-1 16-10 21-20 21h-34z"/>
       </symbol>
 
-      <symbol viewBox="0 0 800 800" id="social__item--fb">
+      <symbol viewbox="0 0 800 800" id="social__item--fb">
         <path d="M445 643h-90V419h-75v-87h75v-64q0-55 32-86 30-29 80-29 28 0 67 3v78h-47q-42 0-42 38v60h86l-11 87h-75v224z"/>
       </symbol>
       <!-- для footer fb -->
-      <symbol viewBox="0 0 800 800" id="social__item-footer--fb">
+      <symbol viewbox="0 0 800 800" id="social__item-footer--fb">
         <path d="M445 643h-90V419h-75v-87h75v-64q0-55 32-86 30-29 80-29 28 0 67 3v78h-47q-42 0-42 38v60h86l-11 87h-75v224z"/>
       </symbol>
 
-      <symbol viewBox="0 0 800 800" id="social__item--tw">
+      <symbol viewbox="0 0 800 800" id="social__item--tw">
         <path d="M679 239s-21 34-55 57c7 156-107 329-314 329-103 0-169-50-169-50s81 17 163-45c-83-5-103-77-103-77s23 6 50-2c-93-23-89-110-89-110s23 14 50 14c-84-65-34-148-34-148s76 107 228 116c-22-121 117-177 188-101 37-6 71-27 71-27s-12 41-49 61c30-2 63-17 63-17z"/>
       </symbol>
       <!-- для footer tw -->
-      <symbol viewBox="0 0 800 800" id="social__item-footer--tw">
+      <symbol viewbox="0 0 800 800" id="social__item-footer--tw">
         <path fill="#ffffff" d="M679 239s-21 34-55 57c7 156-107 329-314 329-103 0-169-50-169-50s81 17 163-45c-83-5-103-77-103-77s23 6 50-2c-93-23-89-110-89-110s23 14 50 14c-84-65-34-148-34-148s76 107 228 116c-22-121 117-177 188-101 37-6 71-27 71-27s-12 41-49 61c30-2 63-17 63-17z"/>
       </symbol>
 
-      <symbol viewBox="0 0 800 800" id="social__item--inst">
+      <symbol viewbox="0 0 800 800" id="social__item--inst">
         <path d="M150 400c0-119 0-166 42-208s88-42 208-42 166 0 208 42 42 89 42 208 0 166-42 208-88 42-208 42-166 0-208-42-42-89-42-208zm455 0c0-114 0-148-29-176-29-29-62-29-176-29s-148 0-176 29c-29 29-29 62-29 176s0 148 29 176c29 29 62 29 176 29s148 0 176-29c29-29 29-62 29-176zM400 272a128 128 0 1 1 0 256 128 128 0 0 1 0-256zm0 211c46 0 83-37 83-83s-37-83-83-83-83 37-83 83 37 83 83 83zm163-216c0 16-13 30-30 30-16 0-30-14-30-30 0-17 14-30 30-30 17 0 30 13 30 30z"/>
       </symbol>
       <!-- для footer inst -->
-      <symbol viewBox="0 0 800 800" id="social__item-footer--inst">
+      <symbol viewbox="0 0 800 800" id="social__item-footer--inst">
         <path d="M150 400c0-119 0-166 42-208s88-42 208-42 166 0 208 42 42 89 42 208 0 166-42 208-88 42-208 42-166 0-208-42-42-89-42-208zm455 0c0-114 0-148-29-176-29-29-62-29-176-29s-148 0-176 29c-29 29-29 62-29 176s0 148 29 176c29 29 62 29 176 29s148 0 176-29c29-29 29-62 29-176zM400 272a128 128 0 1 1 0 256 128 128 0 0 1 0-256zm0 211c46 0 83-37 83-83s-37-83-83-83-83 37-83 83 37 83 83 83zm163-216c0 16-13 30-30 30-16 0-30-14-30-30 0-17 14-30 30-30 17 0 30 13 30 30z"/>
       </symbol>
 
-      <symbol viewBox="0 0 64 64" id="geolocation">
+      <symbol viewbox="0 0 64 64" id="geolocation">
           <circle fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" cx="32" cy="22" r="6"/>
         	<path fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" d="M53,22.735C52.948,10.73,43.599,1,32,1
         		s-21,9.73-21,21.735C11,38.271,31.965,63,31.965,63S53.069,38.271,53,22.735z"/>
       </symbol>
 
-      <symbol viewBox="0 0 64 64" id="smartphone">
+      <symbol viewbox="0 0 64 64" id="smartphone">
         	<rect x="16" y="1" fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" width="32" height="62"/>
         	<line fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" x1="28" y1="5" x2="36" y2="5"/>
         	<line fill="none" stroke="#ffffff" stroke-width="2" stroke-miterlimit="10" x1="16" y1="51" x2="48" y2="51"/>
@@ -62,7 +62,7 @@
           <div class="nav__wrapper">
             <div class="nav__menu">
               <a class="nav__btn  nav__btn--close"></a>  <!-- по умолчанию открыто -->
-              <a class="nav__tel" href="tel:+79378820076">+7 937 882 0076</a>
+              <a class="nav__tel" href="tel:700228">700 228</a>
             </div>
 
             <div class="nav__menu-footer">
@@ -94,7 +94,7 @@
 
             </ul>
             <div class="nav__feedback">
-              <p class="nav__feedback-item nav__feedback--tel">тел. +7 937 882 0076</p>              
+              <p class="nav__feedback-item nav__feedback--tel">тел. 700 228</p>
               <!-- VK Widget -->
               <div id="nav__feedback-vk"></div>
                 <script type="text/javascript">
@@ -109,7 +109,7 @@
         <div class="schedule__wrapper">
           <h2 class="schedule__title" id="schedule">Расписание</h2>
           <p class="schedule__text">
-            Для записи на пробное занятие звоните по тел. +7 937 882 0076 <br />
+            Для записи на пробное занятие звоните по тел. 700 228 <br />
             Платить за пробное занятие не нужно!
           </p>
           <div class="schedule__table">
@@ -118,7 +118,7 @@
             </table>
           </div>
           <p class="schedule__text">
-            Для записи на пробное занятие звоните по тел. +7 937 882 0076 <br />
+            Для записи на пробное занятие звоните по тел. 700 228 <br />
             Платить за пробное занятие не нужно!
           </p>
         </div>
