Пока убран слайдер

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         </div>
       </section>
 
-      <div class="slider">
+      <div class="slider  slider--hidden">
         <ul class="slider__items">
           <li class="slider__item  slider__item--active">
             <picture>
