Исправлена загрузка расписания

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Занятия Pole Dance в Ульяновске|Sky Dance Studio</title>
     <meta name="description" content="Школа танцев Sky Dance Studio">
     <meta name="keywords" content="">
-    <script type="text/javascript" src="//vk.com/js/api/openapi.js?139"></script>
-    <link rel="stylesheet" href="css/style.min.css">
+    <script src="//vk.com/js/api/openapi.js?139"></script>
+    <link rel="stylesheet" href="css/style.min.css?v=2">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
@@ -460,13 +460,13 @@
 
   <script src="js/script.js"></script>
   <!-- jquery -->
-  <script src="js/jquery-1.7.2.min.js" type="text/javascript"></script>
+  <script src="js/jquery-1.7.2.min.js" ></script>
   <!-- easing plugin ( optional ) -->
-  <script src="js/easing.js" type="text/javascript"></script>
+  <script src="js/easing.js" ></script>
   <!-- UItoTop plugin -->
-  <script src="js/jquery.ui.totop.js" type="text/javascript"></script>
+  <script src="js/jquery.ui.totop.js" ></script>
   <!-- Starting the plugin -->
-  <script type="text/javascript">
+  <script >
     $(document).ready(function() {
     /*
     var defaults = {
@@ -482,7 +482,7 @@
     });
   </script>
 
-  <script type="text/javascript">
+  <script >
     $(document).ready(function() {
       $("a.nav__link").click(function () {
         var elementClick = $(this).attr("href");
@@ -493,7 +493,7 @@
     });
   </script>
 
-  <script type="text/javascript">  <!-- слайдер -->
+  <script >  <!-- слайдер -->
     var slides = document.querySelectorAll('.slider__items .slider__item');
     var controls = document.querySelectorAll('.slider__control-items .slider__control-item');
 
@@ -558,7 +558,7 @@
 
   <!-- VK Widget -->
   <div id="nav__feedback-vk"></div>
-  <script type="text/javascript">
+  <script>
     VK.Widgets.CommunityMessages("nav__feedback-vk", 54275923, {tooltipButtonText: "Есть вопрос?"});
   </script>
 
