Доделать пункт Войти

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <div class="nav__menu">
             <a class="nav__btn  nav__btn--close"></a>  <!-- по умолчанию открыто -->
             <a class="nav__tel" href="tel:700228">700 228</a>
+            <a class="nav__lk" href="Client_lk.html">Войти</a>
           </div>
 
           <div class="nav__menu-footer">
@@ -88,7 +89,7 @@
                 <a class="nav__link" href="#about">О нас</a>
               </li>
               <li class="nav__item">
-                <a class="nav__link" href="#teachers">Преподаватели</a>
+                <a class="nav__link" href="#teachers">Наша команда</a>
               </li>
               <li class="nav__item">
                 <a class="nav__link" href="/sched.html">Расписание</a>
@@ -208,7 +209,7 @@
 
       <section class="teachers" id="teachers">
         <div class="teachers__wrapper">
-          <h2 class="teachers__title">Преподаватели</h2>
+          <h2 class="teachers__title">Наша команда</h2>
           <div class="teachers__items">
             <article class="teachers__item">
               <h3 class="teachers__name">
