--- a/sched.html
+++ b/sched.html
@@ -83,7 +83,7 @@
                   <a class="nav__link" href="/index.html#about">О нас</a>
                 </li>
                 <li class="nav__item">
-                  <a class="nav__link" href="/index.html#teachers">Преподаватели</a>
+                  <a class="nav__link" href="/index.html#teachers">Наша команда</a>
                 </li>
                 <li class="nav__item">
                   <a class="nav__link" href="/sched.html">Расписание</a>
